ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress-rules
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: geo-app
    alb.ingress.kubernetes.io/load-balancer-name: test-alb
    alb.ingress.kubernetes.io/group-order: '1'
spec:
  ingressClassName: alb
  rules:
    - host: test-alb.leo-kroshues.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: geo-app
                port:
                  number: 5000
